test/compilation_errors/first_argument_must_be_symbol.clj
(ns compilation_errors.first_argument_must_be_symbol)

(defn [coll] penultimate (last (drop-last coll)))
